<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroEvento">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/submit_button"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lugarFiestaField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lugarFiesta"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lugarFiestaText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapCharacters"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ciudadSalidaField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ciudadSalida"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ciudadSalidaText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/provinciaField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/provincia"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/provinciaText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/horaField"
                android:layout_width="323dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/horaSalida">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/horaText"
                    android:layout_width="304dp"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:inputType="time" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btnHora"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_recent_history" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sitiosField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numPersonas"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sitiosText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxEms="1"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gasolinaField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precioGasolina"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gasolinaText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="Crear Evento" />
    </LinearLayout>
</ScrollView>